--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -22,7 +22,7 @@
             <p><%= image_tag link.user.avatar.url(:thumb) %></p>
           </div>
           <div class="col-md-8">
-            <h3><%= link_to link.name, link.link, target: "_blank" %></h3>
+            <h3><%= link_to link.name, "http://" + link.link, target: "_blank", rel: "nofollow" %></h3>
             <p>
               <%= link_to "Comments", link %>
               &nbsp;&nbsp;
