--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -21,7 +21,7 @@
           <p><%= image_tag @link.user.avatar.url(:thumb) %></p>
         </div>
         <div class="col-md-8">
-          <h3><%= link_to @link.name, @link.link, target: "_blank" %></h3>
+          <h3><%= link_to @link.name, "http://" + @link.link, target: "_blank", rel: "nofollow" %></h3>
          	<% if current_user.id == @link.user_id %>
 						<p>
 							<%= link_to 'Edit', edit_link_path(@link) %> | <%= link_to 'Destroy', @link, method: :delete, data: { confirm: 'Are you sure?' } %>
